--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   http: ^0.13.5
   flutter_scroll_to_top: ^2.0.0
   table_calendar: ^3.0.8
+  awesome_notifications: ^0.6.21
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  badges: ^2.0.3
 
 dev_dependencies:
   flutter_native_splash: ^2.1.6
