--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -56,7 +56,11 @@
 		<true/>
 	</dict>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>We need to access to the microphone to enable you to send voice message</string>
+	<string>App needs to access the microphone to enable you to send voice message</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>App needs to access the photos to enable you to select images</string>
+    <key>NSCameraUsageDescription</key>
+    <string>App needs to access the camera to enable you to take images</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
