re-config twitter logic after Oauth 2.0

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -37,6 +37,13 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                  <!-- Registered Callback URLs in TwitterApp -->
+                <data android:scheme="twittersdk"/> 
+            </intent-filter>
         </activity>
         <activity android:name="com.facebook.FacebookActivity"
             android:configChanges=
@@ -50,8 +57,6 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:scheme="@string/fb_login_protocol_scheme" />
-                  <!-- Registered Callback URLs in TwitterApp -->
-                <data android:scheme="flutter-twitter-login"/> 
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
